Roberto gem installed

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,6 +5,7 @@
      <%= link_to a.title, article_path(a.id), {:style=> "text-decoration: none; color: #337AB7;"} %>
    </h2>
    <p><%= a.content %></p>
+   <p><%= RobertoBarros.quote %></p>
   </li>
   <% end %>
 </ul>
