--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,7 +1,16 @@
+<% flash.each do |type, msg| %>
+  <div>
+    <%= msg %>
+  </div>
+<% end %>
+
+
 <h2>
   <%= @article.title %>
 </h2>
 <p>
   <%= @article.content %>
+  <p><%= RobertoBarros.quote %></p>
+  <p><%= RobertoBarros.fact %></p>
 </p>
 <%= link_to "Edit", edit_article_path(@article.id) %> | <%= link_to "Delete", article_path(@article.id), method: :delete %>
